test/error/error.input78.zc
case or default after existing default on line 6
